--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body{
   border-radius: 3px;
 }
 #myText, #myText2 {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgb(255, 255, 255, 0.9);
   border: none;
   color: black;
   padding: 8px 16px;
